[package]
name = "wifi-nina"
version = "0.2.0"
authors = ["Cole Graber-Mitchell <cargo@cgm616.me>", "Stanislaw Knapinski <vaqxai@gmail.com>"]
edition = "2018"
description = "An embedded driver for ublox NINA-W10-based WiFi boards (using ESP32), present on some Arduinos, or using the Adafruit AirLift series of chips"
repository = "https://github.com/cgm616/wifi-nina/"
license = "MIT"
keywords = ["wifi", "embedded", "airlift", "esp32", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
arrayvec = { version = "0.5.2", default-features = false }
byteorder = { version = "1.4.3", default-features = false }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
itertools = { version = "0.10.5", default-features = false }
log = { version = "0.4.17", default-features = false }
nb = { version = "1.0", default-features = false }
no-std-net = { version = "0.5.0", default-features = false }
num_enum = { version = "0.5.7", default-features = false }

[features]
default = []
# reset-high inverts the reset logic to go to high and then low instead of low and then high
# this is needed on the Arduino MKR WiFi 1010 for example
reset-high = []
# changes rgb pin order to the one on Arduino Nano RP2040 Connect (RGB -> GBR)
arduino-nano-connect = []
